[package]
name = "cc-cli"
version = "1.0.0"
edition = "2021"
description = " Command line tool for automating internal workflows for the Clickconcepts frontend team"
authors = ["NiklasA95"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0.142", features = ["derive"] }
convert_case = "0.5.0"
dotenv = "0.15.0"
csv = "1.1"
tokio = { version = ">=1.21.0", features = ["full"] }
shopify_api = "0.3.4"
